Reverting to an older successful commit